--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@artsy/fresnel": "^1.2.0",
     "@loadable/component": "^5.13.1",
+    "@twicpics/components": "^0.8.2",
     "clsx": "^1.1.1",
     "next": "^11.0.1",
     "react": "^17.0.2",
